--- a/web/css/index.less
+++ b/web/css/index.less
@@ -92,3 +92,9 @@ li p em {
     vertical-align: top;
     opacity: .3;
 }
+#addMore {
+    font-size: 10/@rem;
+    color: rgb(0,133,181);
+    text-align: center;
+    line-height: 100/@rem;
+}
