抢票客户端改进

--- a/web/commonCss/reset.css
+++ b/web/commonCss/reset.css
@@ -18,9 +18,11 @@ input,textarea,select{*font-size:100%}
 body {
     font-family: "MicrosoftYaHei";
 }
-
 .clearfix:after {
     content: "";
     display: block;
     clear: both;
+}
+a{
+    text-decoration: none;
 }
